--- a/src/components/domain/ScheduleItem/ScheduleItem.module.scss
+++ b/src/components/domain/ScheduleItem/ScheduleItem.module.scss
@@ -64,11 +64,6 @@
   &:hover {
     color: #374151;
   }
-
-  @include mobile {
-    width: 32px;
-    height: 32px;
-  }
 }
 
 .menuOverlay {
@@ -356,11 +351,6 @@
     background: $color-bg;
     color: $color-primary;
   }
-
-  @include mobile {
-    min-width: 32px;
-    min-height: 32px;
-  }
 }
 
 .verifiedBadge {
@@ -386,6 +376,12 @@
   justify-content: center;
   min-width: 32px;
   min-height: 32px;
+
+  // keep the 44px touch minimum where fingers are the pointer
+  @media (pointer: coarse) {
+    min-width: 44px;
+    min-height: 44px;
+  }
   border: none;
   background: none;
   border-radius: $border-radius-md;
